--- a/html/admin/adminBranches.html
+++ b/html/admin/adminBranches.html
@@ -16,7 +16,7 @@
   <div class="navBar">
     <div class="logo">
       <a href="../homepage.html">
-        <img src="../../assets/books.jpg" alt="book">
+        <img src="../../assets/logo.png" alt="book">
       </a>
     </div>
     <div class="navButtons">
