--- a/html/homepage.html
+++ b/html/homepage.html
@@ -15,7 +15,7 @@
     <div class="navBar">
       <div class="logo">
         <a href="homepage.html">
-          <img src="../assets/books.jpg" alt="book">
+          <img src="../assets/logo.png" alt="book">
         </a>
       </div>
     </div>
