Rename files in html/admin to avoid redundancy with directory name.

--- a/html/admin/borrowers.html
+++ b/html/admin/borrowers.html
@@ -29,19 +29,19 @@
   <div class="adminDash">
     <div class="adminDash_left">
       <nav class="nav flex-column">
-        <a class="nav-link" href="./adminBooks.html">All Books</a>
-        <a class="nav-link" href="./adminAuthors.html">All Authors</a>
-        <a class="nav-link" href="./adminPublishers.html">All Publishers</a>
-        <a class="nav-link" href="./adminBranches.html">All Branches</a>
-        <a class="nav-link" href="./adminBorrowers.html">All Borrowers</a>
-        <a class="nav-link" href="./adminDueDate.html">Change Due Date</a>
+        <a class="nav-link" href="./books.html">All Books</a>
+        <a class="nav-link" href="./authors.html">All Authors</a>
+        <a class="nav-link" href="./publishers.html">All Publishers</a>
+        <a class="nav-link" href="./branches.html">All Branches</a>
+        <a class="nav-link" href="./borrowers.html">All Borrowers</a>
+        <a class="nav-link" href="./dueDate.html">Change Due Date</a>
       </nav>
     </div>
 
     <div class="adminDash_right">
       <div class="adminTable table-responsive">    
         <div class="table-title">
-          <h3>Publishers</h3>
+          <h3>Borrowers</h3>
           <a href="#">
             <button class="addButton">
               <i class="material-icons">add</i>
@@ -53,7 +53,7 @@
         <table class="table table-hover table-bordered">
           <thead>
             <tr>
-              <th scope="col">Publisher Id</th>
+              <th scope="col">Card Number</th>
               <th scope="col">Name</th>
               <th scope="col">Address</th>
               <th scope="col">Phone</th>
@@ -63,42 +63,42 @@
           <tbody>
             <tr>
               <th scope="row">1</th>
-              <td>Donaldson</td>
-              <td>Fake PubAddr0</td>
-              <td>555-555-5550</td>
+              <td>Bob Reck</td>
+              <td>Fake Street0</td>
+              <td>999-999-9990</td>
               <td class="table_buttons">
-                <a class="edit" href="#" title="Edit Publisher" data-toggle="tooltip">
+                <a class="edit" href="#" title="Edit Borrower" data-toggle="tooltip">
                   <i class="material-icons">edit</i>
                 </a>
-                <a class="delete" href="#" title="Delete Publisher" data-toggle="tooltip">
+                <a class="delete" href="#" title="Delete Borrower" data-toggle="tooltip">
                   <i class="material-icons">delete</i>
                 </a>
               </td>
             </tr>
             <tr>
               <th scope="row">2</th>
-              <td>McGelon</td>
-              <td>Fake PubAddr1</td>
-              <td>555-555-5551</td>
+              <td>David Brooks</td>
+              <td>Fake Street1</td>
+              <td>999-999-9991</td>
               <td class="table_buttons">
-                <a class="edit" href="#" title="Edit Publisher" data-toggle="tooltip">
+                <a class="edit" href="#" title="Edit Borrower" data-toggle="tooltip">
                   <i class="material-icons">edit</i>
                 </a>
-                <a class="delete" href="#" title="Delete Publisher" data-toggle="tooltip">
+                <a class="delete" href="#" title="Delete Borrower" data-toggle="tooltip">
                   <i class="material-icons">delete</i>
                 </a>
               </td>
             </tr>
             <tr>
               <th scope="row">3</th>
-              <td>Penguin</td>
-              <td>Fake PubAddr2</td>
-              <td>555-555-5552</td>
+              <td>Sue Honor</td>
+              <td>Fake Street2</td>
+              <td>999-999-9992</td>
               <td class="table_buttons">
-                <a class="edit" href="#" title="Edit Publisher" data-toggle="tooltip">
+                <a class="edit" href="#" title="Edit Borrower" data-toggle="tooltip">
                   <i class="material-icons">edit</i>
                 </a>
-                <a class="delete" href="#" title="Delete Publisher" data-toggle="tooltip">
+                <a class="delete" href="#" title="Delete Borrower" data-toggle="tooltip">
                   <i class="material-icons">delete</i>
                 </a>
               </td>
