--- a/html/admin/dashboard.html
+++ b/html/admin/dashboard.html
@@ -28,12 +28,12 @@
   <div class="adminDash">
     <div class="adminDash_left">
       <nav class="nav flex-column">
-        <a class="nav-link" href="./adminBooks.html">All Books</a>
-        <a class="nav-link" href="./adminAuthors.html">All Authors</a>
-        <a class="nav-link" href="./adminPublishers.html">All Publishers</a>
-        <a class="nav-link" href="./adminBranches.html">All Branches</a>
-        <a class="nav-link" href="./adminBorrowers.html">All Borrowers</a>
-        <a class="nav-link" href="./adminDueDate.html">Change Due Date</a>
+        <a class="nav-link" href="./books.html">All Books</a>
+        <a class="nav-link" href="./authors.html">All Authors</a>
+        <a class="nav-link" href="./publishers.html">All Publishers</a>
+        <a class="nav-link" href="./branches.html">All Branches</a>
+        <a class="nav-link" href="./borrowers.html">All Borrowers</a>
+        <a class="nav-link" href="./dueDate.html">Change Due Date</a>
       </nav>
     </div>
     <div class="adminDashGreeting_right">
