--- a/html/admin/dueDate.html
+++ b/html/admin/dueDate.html
@@ -29,12 +29,12 @@
   <div class="adminDash">
     <div class="adminDash_left">
       <nav class="nav flex-column">
-          <a class="nav-link" href="./adminBooks.html">All Books</a>
-          <a class="nav-link" href="./adminAuthors.html">All Authors</a>
-          <a class="nav-link" href="./adminPublishers.html">All Publishers</a>
-          <a class="nav-link" href="./adminBranches.html">All Branches</a>
-          <a class="nav-link" href="./adminBorrowers.html">All Borrowers</a>
-          <a class="nav-link" href="./adminDueDate.html">Change Due Date</a>
+          <a class="nav-link" href="./books.html">All Books</a>
+          <a class="nav-link" href="./authors.html">All Authors</a>
+          <a class="nav-link" href="./publishers.html">All Publishers</a>
+          <a class="nav-link" href="./branches.html">All Branches</a>
+          <a class="nav-link" href="./borrowers.html">All Borrowers</a>
+          <a class="nav-link" href="./dueDate.html">Change Due Date</a>
       </nav>
     </div>
   
@@ -62,7 +62,7 @@
               <td>2019-08-02</td>
               <td>2019-08-10</td>
               <td class="table_buttons">
-                <a class="edit" href="adminDueDateEdit.html" title="Edit Due Date" data-toggle="tooltip">
+                <a class="edit" href="dueDateEdit.html" title="Edit Due Date" data-toggle="tooltip">
                   <i class="material-icons">edit</i>
                 </a>
               </td>
@@ -74,7 +74,7 @@
               <td>2019-08-15</td>
               <td>2019-08-25</td>
               <td class="table_buttons">
-                <a class="edit" href="adminDueDateEdit.html" title="Edit Due Date" data-toggle="tooltip">
+                <a class="edit" href="dueDateEdit.html" title="Edit Due Date" data-toggle="tooltip">
                   <i class="material-icons">edit</i>
                 </a>
               </td>
@@ -86,7 +86,7 @@
               <td>2019-08-20</td>
               <td>2019-08-27</td>
               <td class="table_buttons">
-                <a class="edit" href="adminDueDateEdit.html" title="Edit Due Date" data-toggle="tooltip">
+                <a class="edit" href="dueDateEdit.html" title="Edit Due Date" data-toggle="tooltip">
                   <i class="material-icons">edit</i>
                 </a>
               </td>
