--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -22,7 +22,7 @@
   <div class="login_main">
     <div class="login_form">
       <h1>Admin Login</h1>
-      <form action="adminDash.html">
+      <form action="dashboard.html">
         <input type="text" placeholder="Enter your username...">
         <input type="text" placeholder="Enter your password...">
         <button>Enter</button>
