--- a/html/homepage.html
+++ b/html/homepage.html
@@ -33,7 +33,7 @@
     
     <div class="selection">
       <div class="admin">
-        <a href="admin/adminLogin.html">
+        <a href="admin/index.html">
           <button>Administrator</button>
         </a>
       </div>
