--- a/html/admin/books.html
+++ b/html/admin/books.html
@@ -29,20 +29,20 @@
   <div class="adminDash">
     <div class="adminDash_left">
       <nav class="nav flex-column">
-        <a class="nav-link" href="./adminBooks.html">All Books</a>
-        <a class="nav-link" href="./adminAuthors.html">All Authors</a>
-        <a class="nav-link" href="./adminPublishers.html">All Publishers</a>
-        <a class="nav-link" href="./adminBranches.html">All Branches</a>
-        <a class="nav-link" href="./adminBorrowers.html">All Borrowers</a>
-        <a class="nav-link" href="./adminDueDate.html">Change Due Date</a>
+        <a class="nav-link" href="./books.html">All Books</a>
+        <a class="nav-link" href="./authors.html">All Authors</a>
+        <a class="nav-link" href="./publishers.html">All Publishers</a>
+        <a class="nav-link" href="./branches.html">All Branches</a>
+        <a class="nav-link" href="./borrowers.html">All Borrowers</a>
+        <a class="nav-link" href="./dueDate.html">Change Due Date</a>
       </nav>
     </div>
 
     <div class="adminDash_right">
       <div class="adminTable table-responsive">    
         <div class="table-title">
-          <h3>Borrowers</h3>
-          <a href="#">
+          <h3>Books</h3>
+          <a href="./booksAdd.html">
             <button class="addButton">
               <i class="material-icons">add</i>
               Add New
@@ -53,52 +53,52 @@
         <table class="table table-hover table-bordered">
           <thead>
             <tr>
-              <th scope="col">Card Number</th>
-              <th scope="col">Name</th>
-              <th scope="col">Address</th>
-              <th scope="col">Phone</th>
+              <th scope="col">Book Id</th>
+              <th scope="col">Title</th>
+              <th scope="col">Author</th>
+              <th scope="col">Publisher</th>
               <th scope="col">Actions</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <th scope="row">1</th>
-              <td>Bob Reck</td>
-              <td>Fake Street0</td>
-              <td>999-999-9990</td>
+              <th scope="row">4</th>
+              <td>Blue Storm</td>
+              <td>Jessica Daniels</td>
+              <td>Bloomberg</td>
               <td class="table_buttons">
-                <a class="edit" href="#" title="Edit Borrower" data-toggle="tooltip">
+                <a class="edit" href="booksEdit.html" title="Edit Book" data-toggle="tooltip">
                   <i class="material-icons">edit</i>
                 </a>
-                <a class="delete" href="#" title="Delete Borrower" data-toggle="tooltip">
+                <a class="delete" href="#" title="Delete Book" data-toggle="tooltip">
                   <i class="material-icons">delete</i>
                 </a>
               </td>
             </tr>
             <tr>
-              <th scope="row">2</th>
-              <td>David Brooks</td>
-              <td>Fake Street1</td>
-              <td>999-999-9991</td>
+              <th scope="row">5</th>
+              <td>Greek Gods</td>
+              <td>Jessica Daniels</td>
+              <td>Bloomberg</td>
               <td class="table_buttons">
-                <a class="edit" href="#" title="Edit Borrower" data-toggle="tooltip">
+                <a class="edit" href="booksEdit.html" title="Edit Book" data-toggle="tooltip">
                   <i class="material-icons">edit</i>
                 </a>
-                <a class="delete" href="#" title="Delete Borrower" data-toggle="tooltip">
+                <a class="delete" href="#" title="Delete Book" data-toggle="tooltip">
                   <i class="material-icons">delete</i>
                 </a>
               </td>
             </tr>
             <tr>
-              <th scope="row">3</th>
-              <td>Sue Honor</td>
-              <td>Fake Street2</td>
-              <td>999-999-9992</td>
+              <th scope="row">6</th>
+              <td>The Mist</td>
+              <td>Stephen King</td>
+              <td>Donaldson</td>
               <td class="table_buttons">
-                <a class="edit" href="#" title="Edit Borrower" data-toggle="tooltip">
+                <a class="edit" href="booksEdit.html" title="Edit Book" data-toggle="tooltip">
                   <i class="material-icons">edit</i>
                 </a>
-                <a class="delete" href="#" title="Delete Borrower" data-toggle="tooltip">
+                <a class="delete" href="#" title="Delete Book" data-toggle="tooltip">
                   <i class="material-icons">delete</i>
                 </a>
               </td>
