--- a/html/admin/booksAdd.html
+++ b/html/admin/booksAdd.html
@@ -29,58 +29,46 @@
   <div class="adminDash">
     <div class="adminDash_left">
       <nav class="nav flex-column">
-        <a class="nav-link" href="./adminBooks.html">All Books</a>
-        <a class="nav-link" href="./adminAuthors.html">All Authors</a>
-        <a class="nav-link" href="./adminPublishers.html">All Publishers</a>
-        <a class="nav-link" href="./adminBranches.html">All Branches</a>
-        <a class="nav-link" href="./adminBorrowers.html">All Borrowers</a>
-        <a class="nav-link" href="./adminDueDate.html">Change Due Date</a>
+        <a class="nav-link" href="./books.html">All Books</a>
+        <a class="nav-link" href="./authors.html">All Authors</a>
+        <a class="nav-link" href="./publishers.html">All Publishers</a>
+        <a class="nav-link" href="./branches.html">All Branches</a>
+        <a class="nav-link" href="./borrowers.html">All Borrowers</a>
+        <a class="nav-link" href="./dueDate.html">Change Due Date</a>
       </nav>
     </div>
 
     <div class="adminDash_right">
       <div class="adminTable">
-        <h3>Edit Due Date</h3>
+        <h3>Add New Book</h3>
         <div class="adminAddSpace"></div>
         <form>
           <div class="form-group row">
-            <label for="title" class="col-sm-3 col-form-label">Book Id</label>
-            <div class="col-sm-9">
-              <input type="text" disabled class="form-control" value="4" placeholder="Title...">
+            <label for="title" class="col-sm-2 col-form-label">Title</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" placeholder="Title...">
             </div>
           </div>
           <div class="form-group row">
-            <label for="Author" class="col-sm-3 col-form-label">Branch</label>
-            <div class="col-sm-9">
-              <input type="text" disabled class="form-control" value="Madison">
+            <label for="Author" class="col-sm-2 col-form-label">Author</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" placeholder="Author...">
             </div>
           </div>
           <div class="form-group row">
-            <label for="Author" class="col-sm-3 col-form-label">Borrower</label>
-            <div class="col-sm-9">
-              <input type="text" disabled class="form-control" value="Bob Reck">
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="Author" class="col-sm-3 col-form-label">Date Out</label>
-            <div class="col-sm-9">
-              <input type="text" disabled class="form-control" value="2019-08-02">
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="Author" class="col-sm-3 col-form-label">Due Date</label>
-            <div class="col-sm-9">
-              <input type="text" class="form-control" value="2019-08-10" placeholder="Due Date in YYYY-MM-DD...">
+            <label for="Author" class="col-sm-2 col-form-label">Publisher</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" placeholder="Publisher...">
             </div>
           </div>
         </form>
        
         <div class="submit_bttns">
-          <a href="./adminDueDate.html">
+          <a href="./books.html">
             <button class="cancel">Cancel</button>
           </a>
           <a href="">
-            <button class="update">Update Due Date</button>
+            <button class="update">Add Book</button>
           </a>
         </div>
       </div>
