--- a/html/admin/booksEdit.html
+++ b/html/admin/booksEdit.html
@@ -29,12 +29,12 @@
   <div class="adminDash">
     <div class="adminDash_left">
       <nav class="nav flex-column">
-        <a class="nav-link" href="./adminBooks.html">All Books</a>
-        <a class="nav-link" href="./adminAuthors.html">All Authors</a>
-        <a class="nav-link" href="./adminPublishers.html">All Publishers</a>
-        <a class="nav-link" href="./adminBranches.html">All Branches</a>
-        <a class="nav-link" href="./adminBorrowers.html">All Borrowers</a>
-        <a class="nav-link" href="./adminDueDate.html">Change Due Date</a>
+        <a class="nav-link" href="./books.html">All Books</a>
+        <a class="nav-link" href="./authors.html">All Authors</a>
+        <a class="nav-link" href="./publishers.html">All Publishers</a>
+        <a class="nav-link" href="./branches.html">All Branches</a>
+        <a class="nav-link" href="./borrowers.html">All Borrowers</a>
+        <a class="nav-link" href="./dueDate.html">Change Due Date</a>
       </nav>
     </div>
 
@@ -64,7 +64,7 @@
         </form>
        
         <div class="submit_bttns">
-          <a href="./adminBooks.html">
+          <a href="./books.html">
             <button class="cancel">Cancel</button>
           </a>
           <a href="">
