--- a/html/admin/dashboard.html
+++ b/html/admin/dashboard.html
@@ -36,7 +36,7 @@
         <a class="nav-link" href="./dueDate.html">Change Due Date</a>
       </nav>
     </div>
-    <div class="adminDashGreeting_right">
+    <div class="adminDashGreeting_right" id="nameHeader">
       Welcome Administrator
     </div>
   </div>
@@ -44,6 +44,17 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script>
+    function setNameInHeader() {
+      const name = localStorage.getItem("logged-in-user");
+        if (name) {
+          document.getElementById("nameHeader").textContent = "Welcome, " + name + "!";
+        } else {
+          document.getElementById("nameHeader").textContent = "Welcome, Unknown Administrator!";
+        }
+      }
+    setNameInHeader();
+  </script>
 </body>
 
 </html>
