--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -14,7 +14,7 @@
   <script src="../../js/authentication.js"></script>
   <div class="navBar">
     <div class="logo">
-      <a href="../homepage.html">
+      <a href="../index.html">
         <img src="../../assets/logo.png" alt="book">
       </a>
     </div>
