--- a/html/admin/dashboard.html
+++ b/html/admin/dashboard.html
@@ -14,12 +14,12 @@
 <body>
   <div class="navBar">
     <div class="logo">
-      <a href="../homepage.html">
+      <a href="../index.html">
         <img src="../../assets/logo.png" alt="book">
       </a>
     </div>
     <div class="navButtons">
-      <a href="../homepage.html">
+      <a href="../index.html">
         <button>Logout</button>
       </a>
     </div>
