--- a/html/librarian/librarianLogin.html
+++ b/html/librarian/librarianLogin.html
@@ -13,7 +13,7 @@
 <body>
   <div class="navBar">
     <div class="logo">
-      <a href="../homepage.html">
+      <a href="../index.html">
         <img src="../../assets/logo.png" alt="book">
       </a>
     </div>
