Rename borrowerLogin.html and borrowerOptions.html to avoid redundancy.

--- a/html/borrower/index.html
+++ b/html/borrower/index.html
@@ -22,7 +22,7 @@
   <div class="login_main">
     <div class="login_form">
       <h1>Borrower Login</h1>
-      <form action="borrowerOptions.html">
+      <form action="options.html">
         <input type="text" placeholder="Enter your card number...">
         <input type="text" placeholder="Enter your password...">
         <button>Enter</button>
