--- a/html/borrower/returnBook.html
+++ b/html/borrower/returnBook.html
@@ -69,7 +69,7 @@
     </table>
 
     <div class="submit_bttns">
-      <a href="./borrowerOptions.html">
+      <a href="./options.html">
         <button class="cancel">Cancel</button>
       </a>
       <a href="">
