--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,7 @@
         </a>
       </div>
       <div class="borrower">
-        <a href="borrower/borrowerLogin.html">
+        <a href="borrower/index.html">
           <button>Borrower</button>
         </a>
       </div>
