--- a/html/borrower/selectBranch.html
+++ b/html/borrower/selectBranch.html
@@ -31,7 +31,7 @@
   </div>
 
   <div class="submit_bttns">
-    <a href="./borrowerOptions.html">
+    <a href="./options.html">
       <button class="cancel">Cancel</button>
     </a>
     <a href="./checkoutBook.html">
