Give login-failure feedback via an in-form message, not console.log().

--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -26,6 +26,7 @@
       <form action="dashboard.html" onsubmit="return authenticate()">
         <input type="text" id="username" placeholder="Enter your username...">
         <input type="password" id="password" placeholder="Enter your password...">
+	<div id="errorMessageDiv" class="errorMessage">Invalid username or password.</div>
         <button>Enter</button>
       </form>
     </div>
