--- a/html/borrower/index.html
+++ b/html/borrower/index.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 
-  <link rel="stylesheet" href="../../css/index.css">
-  <link rel="stylesheet" href="../../css/style.css">
+  <link rel="stylesheet" href="../../css/index.css" />
+  <link rel="stylesheet" href="../../css/style.css" />
 </head>
 
 <body>
+  <script src="../../js/authentication.js"></script>
   <div class="navBar">
     <div class="logo">
       <a href="../index.html">
@@ -18,13 +19,14 @@
       </a>
     </div>
   </div>
-  
+
   <div class="login_main">
     <div class="login_form">
       <h1>Borrower Login</h1>
-      <form action="options.html">
-        <input type="text" placeholder="Enter your card number...">
-        <input type="text" placeholder="Enter your password...">
+      <form action="options.html" onsubmit="return authenticate()">
+        <input type="text" id="username" placeholder="Enter your username...">
+        <input type="password" id="password" placeholder="Enter your password...">
+	<div id="errorMessageDiv" class="errorMessage">Invalid username or password.</div>
         <button>Enter</button>
       </form>
     </div>
