Rename files in librarian/ to suit my taste.

--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
         </a>
       </div>
       <div class="librarian">
-        <a href="librarian/librarianLogin.html">
+        <a href="librarian/index.html">
           <button>Librarian</button>
         </a>
       </div>
