--- a/html/librarian/branchList.html
+++ b/html/librarian/branchList.html
@@ -38,10 +38,10 @@
           <td>Madison</td>
           <td>Fake Branch0 Land</td>
           <td class="table_buttons">
-            <a class="edit" href="editLibraryBranch.html" title="Edit Branch Info" data-toggle="tooltip">
+            <a class="edit" href="editBranch.html" title="Edit Branch Info" data-toggle="tooltip">
               <i class="material-icons">edit</i>
             </a>
-            <a class="delete" href="editbookCopies.html" title="Edit number of book copies" data-toggle="tooltip">
+            <a class="delete" href="editCopies.html" title="Edit number of book copies" data-toggle="tooltip">
               <i class="material-icons">library_books</i>
             </a>
           </td>
@@ -51,10 +51,10 @@
           <td>James</td>
           <td>Fake Branch1 Land</td>
           <td class="table_buttons">
-            <a class="edit" href="editLibraryBranch.html" title="Edit Branch Info" data-toggle="tooltip">
+            <a class="edit" href="editBranch.html" title="Edit Branch Info" data-toggle="tooltip">
               <i class="material-icons">edit</i>
             </a>
-            <a class="delete" href="editbookCopies.html" title="Edit number of book copies" data-toggle="tooltip">
+            <a class="delete" href="editCopies.html" title="Edit number of book copies" data-toggle="tooltip">
               <i class="material-icons">library_books</i>
             </a>
           </td>
@@ -64,10 +64,10 @@
           <td>Sharpstown</td>
           <td>Fake Branch2 Land</td>
           <td class="table_buttons"> 
-            <a class="edit" href="editLibraryBranch.html" title="Edit Branch Info" data-toggle="tooltip">
+            <a class="edit" href="editBranch.html" title="Edit Branch Info" data-toggle="tooltip">
               <i class="material-icons">edit</i>
             </a>
-            <a class="delete" href="editbookCopies.html" title="Edit number of book copies" data-toggle="tooltip">
+            <a class="delete" href="editCopies.html" title="Edit number of book copies" data-toggle="tooltip">
               <i class="material-icons">library_books</i>
             </a>
           </td>
