--- a/html/librarian/editBranch.html
+++ b/html/librarian/editBranch.html
@@ -70,7 +70,7 @@
     </form>
 
     <div class="submit_bttns">
-      <a href="./libBranchesList.html">
+      <a href="./branchList.html">
         <button class="cancel">Cancel</button>
       </a>
       <a href="">
