--- a/html/librarian/index.html
+++ b/html/librarian/index.html
@@ -22,7 +22,7 @@
   <div class="login_main">
     <div class="login_form">
       <h1>Librarian Login</h1>
-      <form action="libBranchesList.html">
+      <form action="branchList.html">
         <input type="text" placeholder="Enter your username...">
         <input type="text" placeholder="Enter your password...">
         <button>Enter</button>
