--- a/html/librarian/editCopies.html
+++ b/html/librarian/editCopies.html
@@ -66,7 +66,7 @@
     </table>
 
     <div class="submit_bttns">
-      <a href="./libBranchesList.html">
+      <a href="./branchList.html">
         <button class="cancel">Cancel</button>
       </a>
       <a href="">
