--- a/html/admin/booksEdit.html
+++ b/html/admin/booksEdit.html
@@ -42,35 +42,41 @@
       <div class="adminTable">
         <h3>Edit Book</h3>
         <div class="adminAddSpace"></div>
-        <form>
+        <form onSubmit="return validateBook();">
           <div class="form-group row">
             <label for="title" class="col-sm-2 col-form-label">Title</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" value="Blue Storm" placeholder="Title...">
+              <input type="text" id="bookTitle" class="form-control" value="Blue Storm" placeholder="Title...">
             </div>
           </div>
+	  <div class="form-group row errorMessage" id="titleError">Title cannot
+		  be more than 20 characters long.</div>
           <div class="form-group row">
             <label for="Author" class="col-sm-2 col-form-label">Author</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" value="Jessical Daniels" placeholder="Author...">
+              <input type="text" id="bookAuthor" class="form-control" value="Jessical Daniels" placeholder="Author...">
             </div>
           </div>
+	  <div class="form-group row errorMessage" id="authorError">Book must
+		  have an author.</div>
           <div class="form-group row">
             <label for="Author" class="col-sm-2 col-form-label">Publisher</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" value="Bloomberg" placeholder="Publisher...">
+              <input type="text" id="bookPublisher" class="form-control" value="Bloomberg" placeholder="Publisher...">
             </div>
+          </div>
+	  <div class="form-group row errorMessage" id="publisherError">Book must
+		  have a publisher.</div>
+          <div class="submit_bttns">
+            <a href="./books.html">
+              <button class="cancel">Cancel</button>
+            </a>
+            <a href="">
+              <button class="update">Update Book</button>
+            </a>
           </div>
         </form>
        
-        <div class="submit_bttns">
-          <a href="./books.html">
-            <button class="cancel">Cancel</button>
-          </a>
-          <a href="">
-            <button class="update">Update Book</button>
-          </a>
-        </div>
       </div>
     </div>
   </div>
