booksAdd.html, booksEdit.html: Make cancel button a pure link and submit button a pure button.

--- a/html/admin/booksAdd.html
+++ b/html/admin/booksAdd.html
@@ -69,12 +69,8 @@
 	  <div class="form-group row errorMessage" id="publisherError">Book must
 		  have a publisher.</div>
           <div class="submit_bttns">
-            <a href="./books.html">
-              <button class="cancel">Cancel</button>
-            </a>
-            <a href="">
-              <button class="update">Add Book</button>
-            </a>
+            <a href="./books.html" class="cancel">Cancel</a>
+            <button class="update">Add Book</button>
           </div>
         </form>
        
