--- a/html/admin/booksEdit.html
+++ b/html/admin/booksEdit.html
@@ -68,12 +68,8 @@
 	  <div class="form-group row errorMessage" id="publisherError">Book must
 		  have a publisher.</div>
           <div class="submit_bttns">
-            <a href="./books.html">
-              <button class="cancel">Cancel</button>
-            </a>
-            <a href="">
-              <button class="update">Update Book</button>
-            </a>
+            <a href="./books.html" class="cancel">Cancel</a>
+            <button class="update">Update Book</button>
           </div>
         </form>
        
