--- a/html/admin/dashboard.html
+++ b/html/admin/dashboard.html
@@ -19,9 +19,7 @@
       </a>
     </div>
     <div class="navButtons">
-      <a href="../index.html">
-        <button>Logout</button>
-      </a>
+      <a href="../index.html" class="buttonLink">Logout</a>
     </div>
   </div>
 
