--- a/html/admin/dueDateEdit.html
+++ b/html/admin/dueDateEdit.html
@@ -20,9 +20,7 @@
       </a>
     </div>
     <div class="navButtons">
-      <a href="../index.html">
-        <button>Logout</button>
-      </a>
+      <a href="../index.html" class="buttonLink">Logout</a>
     </div>
   </div>
 
