--- a/html/admin/booksAdd.html
+++ b/html/admin/booksAdd.html
@@ -14,6 +14,7 @@
 
 <body>
   <script src="../../js/validation.js"></script>
+  <script src="../../js/logout.js"></script>
   <div class="navBar">
     <div class="logo">
       <a href="../index.html">
@@ -21,7 +22,7 @@
       </a>
     </div>
     <div class="navButtons">
-      <a href="../index.html" class="buttonLink">Logout</a>
+      <a href="../index.html" class="buttonLink" onClick="logout()">Logout</a>
     </div>
   </div>
 
