--- a/html/admin/dashboard.html
+++ b/html/admin/dashboard.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <script src="../../js/logout.js"></script>
   <div class="navBar">
     <div class="logo">
       <a href="../index.html">
@@ -19,7 +20,7 @@
       </a>
     </div>
     <div class="navButtons">
-      <a href="../index.html" class="buttonLink">Logout</a>
+      <a href="../index.html" class="buttonLink" onClick="logout()">Logout</a>
     </div>
   </div>
 
