--- a/html/admin/dueDate.html
+++ b/html/admin/dueDate.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <script src="../../js/logout.js"></script>
   <div class="navBar">
     <div class="logo">
       <a href="../index.html">
@@ -20,7 +21,7 @@
       </a>
     </div>
     <div class="navButtons">
-      <a href="../index.html" class="buttonLink">Logout</a>
+      <a href="../index.html" class="buttonLink" onClick="logout()">Logout</a>
     </div>
   </div>
 
